1. add *.user, *.opensdf to .gitingore file 2. modify vcproj output bin file dir in netio project
Signed-off-by: xushvai <xushvai@gmail.com>

--- a/framework/netio/proj.win32.vcproj/proj.win32.vcproj.vcxproj
+++ b/framework/netio/proj.win32.vcproj/proj.win32.vcproj.vcxproj
@@ -46,6 +46,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <OutputFile>../../../run/netio/bin/netio.exe</OutputFile>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
