Signed-off-by: xushuai <xushvai@gmail.com>
1. change xcode proj options to output netio bin file to run/netio/bin dir

2. add ignore record "run/netio/bin/netio" to .gitingore file

3. add "x" privilege to run/netio/bin/start.sh file

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 *.sdf
 *.tlog
 *.obj
-*.exe
 *.ilk
 *.lastbuildstate
 *.log
@@ -10,3 +9,6 @@
 *.suo
 *.opensdf
 *.user
+*.exe
+
+run/netio/bin/netio
