Signed-off-by: xushuai <xushvai@gmail.com>
1. add netio makefile

2. add ignore record "*.o" to .gitignore file

--- a/framework/netio/makefile
+++ b/framework/netio/makefile
@@ -1,1 +1,14 @@
-# makefile
+CPP=g++
+BIN=../../run/netio/bin/netio
+OBJ=main.o
+
+all:$(BIN)
+
+$(BIN):$(OBJ)
+	$(CPP) $(OBJ) -o $(BIN) 
+
+main.o:main.cpp
+	$(CPP) -c main.cpp
+
+clean:
+	rm -f $(BIN) $(OBJ)
