--- a/framework/confer/win32.proj.vc/configfile.vcxproj.filters
+++ b/framework/confer/win32.proj.vc/configfile.vcxproj.filters
@@ -1,39 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{d54eb450-24ac-41ba-8e46-0530e5ba2670}</UniqueIdentifier>
-      <Extensions>cpp;c;cxx;rc;def;r;odl;idl;hpj;bat</Extensions>
-    </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{f87906fd-e520-47c4-9146-43e9fc9f8d77}</UniqueIdentifier>
-      <Extensions>h;hpp;hxx;hm;inl</Extensions>
-    </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{c559bb15-4fe1-4cb4-a192-803e0feb7fde}</UniqueIdentifier>
-      <Extensions>ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe</Extensions>
-    </Filter>
+    <ClCompile Include="..\configfile.cpp" />
+    <ClCompile Include="..\configfiledll.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\configfile.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\configfiledll.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
+    <ClInclude Include="..\configfile.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\src\configfiledll.def">
-      <Filter>Source Files</Filter>
-    </None>
-    <None Include="..\src\makefile" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\src\configfile.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\..\include\interface\iconfigfile.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
+    <None Include="..\configfiledll.def" />
   </ItemGroup>
 </Project>
