--- a/framework/logger/win32.proj.vc/logger.vcxproj
+++ b/framework/logger/win32.proj.vc/logger.vcxproj
@@ -124,7 +124,7 @@
     </ResourceCompile>
     <Link>
       <AdditionalDependencies>odbc32.lib;odbccp32.lib;WS2_32.lib;base.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <OutputFile>../../../dll/logger.dll</OutputFile>
+      <OutputFile>../../../dll/mod_logger.dll</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <AdditionalLibraryDirectories>..\..\..\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <ModuleDefinitionFile>..\loggerdll.def</ModuleDefinitionFile>
