--- a/framework/logger/win32.proj.vc/logger.vcxproj
+++ b/framework/logger/win32.proj.vc/logger.vcxproj
@@ -298,6 +298,7 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <None Include="..\loggerdll.def" />
     <None Include="..\src\makefile" />
   </ItemGroup>
   <ItemGroup>
