--- a/framework/logger/win32.proj.vc/logger.vcxproj.filters
+++ b/framework/logger/win32.proj.vc/logger.vcxproj.filters
@@ -2,6 +2,7 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <None Include="..\src\makefile" />
+    <None Include="..\loggerdll.def" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\logger.cpp" />
