--- a/framework/liblog/win32.proj.vc/liblog.vcxproj.filters
+++ b/framework/liblog/win32.proj.vc/liblog.vcxproj.filters
@@ -2,11 +2,11 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <None Include="..\src\makefile" />
-    <None Include="..\loggerdll.def" />
+    <None Include="..\liblog.def" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\liblog.cpp" />
     <ClCompile Include="..\logger.cpp" />
-    <ClCompile Include="..\loggerdll.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\logger.h" />
