--- a/framework/liblog/win32.proj.vc/liblog.vcxproj.filters
+++ b/framework/liblog/win32.proj.vc/liblog.vcxproj.filters
@@ -5,10 +5,10 @@
     <None Include="..\liblog.def" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\liblog.cpp" />
-    <ClCompile Include="..\logger.cpp" />
+    <ClInclude Include="..\logger.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\logger.h" />
+    <ClCompile Include="..\liblog.cc" />
+    <ClCompile Include="..\logger.cc" />
   </ItemGroup>
 </Project>
